Updeted models: service and booking. Added method post. Updeted swagger.yaml. Added pathes for barber/id, service/id, booking/id
