# controller/barbersController.js
@@ -10,9 +10,29 @@ if (barbers.length == 0){
     }
 }
 
-exports.createNew = async (req, res) =>{   
-    res.send({"message": "Not implemented yet"})
+exports.createNew = async (req, res) =>{
+    let barber
+
+    try{
+        barber = await Barbers.create(req.body, 
+            {
+                logging:console.log, 
+                fields: ["barberName"]
+            })
+    } catch (error){
+        if (error instanceof db.Sequelize.ValidationError){
+            res.status(400).send({"error": error.errors.map((item)=> item.message)})        
+        }else{
+            console.log("BarbersCreate", error) 
+            res.status(500).send({"error": "Somtheng went wrong on our side. Sorry :("})          
+        }
+        return
+    }
 }
+
+/*exports.createNew = async (req, res) =>{   
+    res.send({"message": "Not implemented yet"})
+}*/
 
 exports.getById = async (req, res) =>{
     const barber = await Barbers.findByPk(req.params.id_barber)
